--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -6,9 +6,8 @@ Replace the paragraph below with the relevant installation instructions
 if you do not use Zoom
 {% endcomment %}
 <p>
-  If you haven't used Zoom before, go to the
-  <a href="https://zoom.us/download">official website</a>
-  to download and install the Zoom client for your computer.
+    The workshop will be delivered via [https://www.st-andrews.ac.uk/it-support/services/microsoft-365/](Microsoft Teams).
+    Registered attendees will be added to the relevant Team ahead of the workshop.
 </p>
 
 
@@ -19,7 +18,7 @@ if you do not use Zoom
   you will be learning by "coding along" with the Instructors.
   To do this, you will need to have both the window for the tool
   you will be learning about (a terminal, RStudio, your web browser, etc..)
-  and the window for the Zoom video conference client open.
+  and the window for the Teams video conference client open.
   In order to see both at once,
   we recommend using one of the following set up options:
   <ul>
