--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -6,7 +6,7 @@ Replace the paragraph below with the relevant installation instructions
 if you do not use Zoom
 {% endcomment %}
 <p>
-    The workshop will be delivered via [https://www.st-andrews.ac.uk/it-support/services/microsoft-365/](Microsoft Teams).
+    The workshop will be delivered via <a href="https://www.st-andrews.ac.uk/it-support/services/microsoft-365/">Microsoft Teams</a>.
     Registered attendees will be added to the relevant Team ahead of the workshop.
 </p>
 
